--- a/src/style/viewEdit.css
+++ b/src/style/viewEdit.css
@@ -23,3 +23,12 @@
 .block_t,.block_b{background:url(data:image/gif;base64,R0lGODlhBgABAKEAAP///wAAADY2Nv///yH/C05FVFNDQVBFMi4wAwEAAAAh/hpDcmVhdGVkIHdpdGggYWpheGxvYWQuaW5mbwAh+QQACgD/ACwAAAAABgABAAACAxQuUgAh+QQBCgADACwAAAAABgABAAACA5SAUgAh+QQBCgADACwAAAAABgABAAACA5SBBQAh+QQBCgADACwAAAAABgABAAACA4QOUAAh+QQBCgADACwAAAAABgABAAACAwSEUAAh+QQBCgADACwAAAAABgABAAACA4SFBQA7);}
 .block_l,.block_r{background:url(data:image/gif;base64,R0lGODlhAQAGAKEAAP///wAAADY2Nv///yH/C05FVFNDQVBFMi4wAwEAAAAh/hpDcmVhdGVkIHdpdGggYWpheGxvYWQuaW5mbwAh+QQACgD/ACwAAAAAAQAGAAACAxQuUgAh+QQBCgADACwAAAAAAQAGAAACA5SAUgAh+QQBCgADACwAAAAAAQAGAAACA5SBBQAh+QQBCgADACwAAAAAAQAGAAACA4QOUAAh+QQBCgADACwAAAAAAQAGAAACAwSEUAAh+QQBCgADACwAAAAAAQAGAAACA4SFBQA7);}
 *[contentEditable="true"]{ background:#fff;}
+
+.Blickcookroom a{
+	margin-left: 2px; display: none; padding: 0px 5px; width: 50px; height: 25px; line-height: 25px; position: relative; top: -25px; right: -1px; text-align: center; color: rgb(255, 255, 255); background: rgb(77, 161, 218);
+}
+.Blickcookroom a:hover{ 
+	background: #ff4e00;
+}
+
+.Blickcookroom {position: absolute; z-index:900;background:rgba(0,0,0,0.02);text-align: center; font-size:12px;}
