--- a/src/style/viewEdit.css
+++ b/src/style/viewEdit.css
@@ -33,3 +33,33 @@
 }
 
 .Blickcookroom {position: absolute; z-index:900;background:rgba(0,0,0,0.02);text-align: center; font-size:12px;}
+
+
+.ve-popup-bg{position: fixed; left: 0; top: 0; z-index: 200; width: 100%; height: 100%;}
+.ve-popup-main{
+	position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 90000; text-align: center; display: block; font-size: 12px; opacity: 0;
+	
+}
+.ve-popup-main.ve-show{ opacity: 1;}
+
+.ve-popup-main .ve-msg,.ve-popup-main .ve-load{ z-index: 600; box-shadow: 1px 1px 3px rgba(0,0,0,.3); background: rgba(0,0,0,0.8); display: inline-block; margin:0; position: fixed; top:50%; left: 50%; color: #fff; border-radius: 3px; padding: 5px 20px; }
+.ve-popup-main .ve-load{ background:url(popup/loading-0.gif) center center no-repeat; width: 60px; height: 24px; padding: 0; box-shadow: none; margin-top: -12px; }
+.ve-open{ position: fixed; top: 50%; background: #fff; left: 50%; z-index: 600;
+		background-color: #fff;
+    -webkit-background-clip: content;
+    border-radius: 2px;
+    box-shadow: 1px 1px 50px rgba(0,0,0,.3);
+}}
+.ve-open .ve-title{ text-align: left; position: relative; z-index: 0;
+	padding: 0 80px 0 20px;  height: 42px; line-height: 42px;border-bottom: 1px solid #eee; font-size: 14px;
+  color: #333; overflow: hidden; background-color: #F8F8F8; border-radius: 2px 2px 0 0; 
+}
+.ve-open .ve-title .ve-close{background:url(popup/icon.png) 1px -40px;position: absolute; width: 16px; height: 16px; right: 10px; top: 13px; cursor: pointer;
+    font-size: 12px; opacity: .8;}
+.ve-open .ve-title .ve-close:hover{ opacity: 1;}
+.ve-open .ve-btn{text-align: right;padding: 10px 15px 12px;pointer-events: auto;user-select: none;-webkit-user-select: none;border-top: 1px solid #eee;}
+.ve-open .ve-btn a{display: inline-block; background: #8d8d8d; color: #fff; font-size: 12px; margin: 0px 5px; padding: 9px 20px; cursor:pointer; }
+.ve-open .ve-btn a:hover{ background: #555;}
+.ve-open .ve-btn a.ve-btn-0{ background: #4da1da; }
+.ve-open .ve-btn a.ve-btn-0:hover{background: #ff4e00;}
+.ve-open .ve-center{ overflow:hidden; overflow-y: auto;}
