--- a/src/style/viewEdit.css
+++ b/src/style/viewEdit.css
@@ -26,7 +26,7 @@
 *[contentEditable="true"]{ background:#fff;}
 
 .Blickcookroom a{
-	margin-left: 2px; display: none; padding: 0px 5px; width: 50px; height: 25px; line-height: 25px; position: relative; top: -25px; right: -1px; text-align: center; color: rgb(255, 255, 255); background: rgb(77, 161, 218);
+	margin-left: 2px; display: none; padding: 0px 5px; font-size: 12px; min-width: 50px; height: 25px; line-height: 25px; position: relative; top: -25px; right: -1px; text-align: center; color: rgb(255, 255, 255); background: rgb(77, 161, 218);
 }
 .Blickcookroom a:hover{ 
 	background: #ff4e00;
